# GolemHub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_prod  README.md  common-services.yml  docker-compose.dev-db.yml  docker-compose.prod.yml  docker-compose.prod_build.yml  docker-compose.test.yml  docker-compose.yml
dev_db/: dockerfile_with_dummy_data
dev_db/generators/: GenerateImagesCSV.py  GenerateUsersCSV.py  GolemHub.sql  migrate.sql
migrations/: 20220405132707_base.sql
src/: data_types.rs  db_connection.rs  main.rs
