[package]
name = "golem_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "golem_hub"
path = "src/main.rs"

[dependencies]
actix-web = {version = "4"}
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres" ] }
anyhow = "1.0.56"
env_logger = "0.9.0"
futures-util = "0.3.21"
log = "0.4"
